--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,70 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Record a track
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content padding>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2" offset="1">
+        <ion-fab-button large round [ngClass]="tracking ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="startTracking()">
+          <ion-icon name="play"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+      <ion-col size="2" offset="1">
+        <ion-fab-button large round [ngClass]="!tracking ? 'disabled' : 'enabled'"  [disabled]="!(tracking)" (click)="pauseTracking()">
+          <ion-icon name="pause"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+      <ion-col size="2" offset="1">
+        <ion-fab-button large round [ngClass]="stop ? 'disabled' : 'enabled'" [disabled]="(stop)" (click)="stopTracking()">
+          <ion-icon name="stop"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+      <ion-col size="2" offset="1">
+        <ion-fab-button large round type="button" [ngClass]="(!stop || start) ? 'disabled' : 'enabled'" [disabled]="(!stop || start)" (click)="setTrackDetails()">
+          <ion-icon name="save"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+    </ion-row>  
+  </ion-grid>  
+
+  <ion-card class="yellow-card">
+    <ion-card-header>
+      <ion-card-title>
+        Distance: {{track.results.distance | number:'1.3' }} km
+        <br>
+        Elevation gain: {{track.results.elevationGain | number:'1.0-0' }} m
+        <br>
+        Elevation loss: {{track.results.elevationLoss | number:'1.0-0' }} m
+        <br>
+        Time: {{ time }}
+        <br>
+        {{totalNum}} points recorded
+      </ion-card-title>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card class="yellow-card">
+    <ion-card-header>
+      <ion-card-title>
+        Current elevation: <ng-container *ngIf="currentAltitude !== undefined">{{currentAltitude | number:'1.0-0' }} m</ng-container>
+        <br>
+        Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
+      </ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <div id="canvasContainer" class="canvases" >
+    <h1 class = 'title'>MAP. Grid size: {{gridsize}} km</h1>   
+    <canvas id="ncanvasMap" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
+    <canvas id="ncanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
+    <canvas id="ncanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+  </div>  
 </ion-content>
+
