--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,49 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Available tracks
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content padding>  
+  <div class="ion-content-scroll-host">
+  <ion-list>
+    <ion-list-header>
+      <ion-label class = 'title'>Name, date and place</ion-label>
+    </ion-list-header>
+    <ion-item *ngFor ="let item of collection">
+      <div  [ngClass]="(item.isChecked) ? 'checked' : 'unchecked'">
+        <ion-label>
+          {{item.name}}<br>
+          {{item.date | date: 'dd-MM-yyyy HH:mm' }}<br>
+          {{item.place}}
+        </ion-label>
+      </div>
+      <ion-checkbox medium slot ="end" [(ngModel)] ="item.isChecked" (ionChange)="onChange()"></ion-checkbox>
+    </ion-item>
+  </ion-list>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-grid>
+    <ion-row>
+      <ion-col size ="4">
+        <ion-button [ngClass]="(numChecked == 0) ? 'redDisabled' : 'redEnabled'" (click)="deleteTracks()" expand ="block" [disabled] = '(numChecked == 0)'>
+          <div><small>REMOVE<br>TRACKS</small></div>
+        </ion-button>
+      </ion-col>
+      <ion-col size ="4">
+        <ion-button [ngClass]="(numChecked != 1) ? 'greenDisabled' : 'greenEnabled'" (click)="editTrack()" expand ="block" [disabled] = '(numChecked != 1)'>
+          <div><small>EDIT<br>TRACK</small></div>
+         </ion-button>
+      </ion-col>
+      <ion-col size ="4">
+        <ion-button [ngClass]="(numChecked != 1) ? 'greenDisabled' : 'greenEnabled'" (click)="displayTrack()" expand ="block" [disabled] = '(numChecked != 1)'>
+          <div><small>DISPLAY<br>TRACK</small></div>
+         </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>  
+</ion-footer>
