--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,45 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Display a track
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content padding>
+  <ion-card class="blue-card">
+    <ion-card-header>
+      <ion-card-title>
+        {{track.name}}<br>
+        {{track.date | date: 'dd-MM-yyyy HH:mm' }}<br>
+        {{track.place}}
+      </ion-card-title>
+    </ion-card-header>  
+    <ion-card-subtitle>
+      {{track.description}}
+    </ion-card-subtitle>
+  </ion-card>
+  <ion-card class="blue-card">
+    <ion-card-header>
+      <ion-card-title>
+        Distance: {{track.results.distance | number:'1.3' }} km
+        <br>
+        Elevation gain: {{track.results.elevationGain | number:'1.0-0' }} m
+        <br>
+        Elevation loss: {{track.results.elevationLoss | number:'1.0-0' }} m
+        <br>
+        Time: {{ time }}
+        <br>
+        {{totalNum}} points recorded
+      </ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <div id="canvasContainer" class="canvases" >
+    <h1 class = 'title'>MAP. Grid size: {{gridsize}} km</h1>   
+    <canvas id="canvasMap" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
+    <canvas id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
+    <canvas id="canvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+  </div>  
 </ion-content>
