--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,8 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding>            
 
+  <div #map id="map"></div>
+  
   <ion-grid>
     <ion-row>
       <ion-col size="2" offset="1">
