dibujadas rutas almacenadas

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -36,6 +36,12 @@ ion-icon {
 
 
 #map {
-  height: calc(100% - 0px);
-  width: 100vw;
+  height: 380px;
+  width: 380px;
   }
+
+#marker {
+  width: 20px;
+  height: 30px;
+  color: green
+}  
