--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -34,9 +34,12 @@
       </ion-card-title>
     </ion-card-header>
   </ion-card>
+  <div #map id="map2"></div>
   <div id="canvasContainer" class="canvases" >
+<!--
     <h1 class = 'title'>MAP. Grid size: {{gridsize}} km</h1>   
     <canvas id="canvasMap" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+-->
     <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
     <canvas id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
