--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,17 +16,12 @@
         </ion-fab-button>
       </ion-col>
       <ion-col size="2" offset="1">
-        <ion-fab-button large round [ngClass]="!tracking ? 'disabled' : 'enabled'"  [disabled]="!(tracking)" (click)="pauseTracking()">
-          <ion-icon name="pause"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-      <ion-col size="2" offset="1">
-        <ion-fab-button large round [ngClass]="stop ? 'disabled' : 'enabled'" [disabled]="(stop)" (click)="stopTracking()">
+        <ion-fab-button large round [ngClass]="tracking ? 'enabled' : 'disabled'" [disabled]="(!tracking)" (click)="stopTracking()">
           <ion-icon name="stop"></ion-icon>
         </ion-fab-button>
       </ion-col>
-      <ion-col size="2" offset="1">
-        <ion-fab-button large round type="button" [ngClass]="(!stop || start) ? 'disabled' : 'enabled'" [disabled]="(!stop || start)" (click)="setTrackDetails()">
+      <ion-col size="2" offset="3">
+        <ion-fab-button large round type="button" [ngClass]="(tracking) ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="setTrackDetails()">
           <ion-icon name="save"></ion-icon>
         </ion-fab-button>
       </ion-col>
@@ -36,15 +31,15 @@
   <ion-card class="yellow-card">
     <ion-card-header>
       <ion-card-title>
-        Distance: {{track.results.distance | number:'1.3' }} km
+        Distance: {{currentDistance | number:'1.3' }} km
         <br>
-        Elevation gain: {{track.results.elevationGain | number:'1.0-0' }} m
+        Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
         <br>
-        Elevation loss: {{track.results.elevationLoss | number:'1.0-0' }} m
+        Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
         <br>
-        Time: {{ time }}
+        Time: {{ currentTime }}
         <br>
-        {{totalNum}} points recorded
+        {{currentNumber}} points recorded
       </ion-card-title>
     </ion-card-header>
   </ion-card>
