--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -8,18 +8,21 @@ ion-toolbar{
   --background: yellow !important;
 }
 
-#canvasContainer {
-  text-align: center;
-}
-
-.title {
-  font-size: 20px;
+.card {
+  margin-left: 20px;
+  font-size: 15px;
   font-family: 'Arial, sans-serif';
   font-weight: bold
 }
 
-.yellow-card {
-  background-color: yellow;
+.title {
+  font-size: 15px;
+  font-family: 'Arial, sans-serif';
+  font-weight: bold
+}
+
+#canvasContainer {
+  text-align: center;
 }
 
 .disabled {
@@ -37,27 +40,6 @@ ion-icon {
 
 #map {
   height: 500px;
-  width: 350px;
+  width: 100%;
 }
 
-/* Custom styles for the zoom control 
-div.tt-zoom-control {
-  background-color: transparent;
-}
-
-button.tt-zoom-in {
-  background-color: #fff;
-  border-radius: 5px;
-}
-
-button.tt-zoom-out {
-  background-color: #fff;
-  border-radius: 5px;
-}
-
-button.tt-zoom-in:hover,
-button.tt-zoom-out:hover {
-  background-color: #f0f0f0;
-}
-
-*/
