--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,39 +7,27 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card class="blue-card">
-    <ion-card-header>
-      <ion-card-title>
-        {{track.name}}<br>
-        {{track.date | date: 'dd-MM-yyyy HH:mm' }}<br>
-        {{track.place}}
-      </ion-card-title>
-    </ion-card-header>  
-    <ion-card-subtitle>
-      {{track.description}}
-    </ion-card-subtitle>
-  </ion-card>
-  <ion-card class="blue-card">
-    <ion-card-header>
-      <ion-card-title>
-        Distance: {{currentDistance | number:'1.3' }} km
-        <br>
-        Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
-        <br>
-        Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
-        <br>
-        Time: {{ currentTime }}
-        <br>
-        {{currentNumber}} points recorded
-      </ion-card-title>
-    </ion-card-header>
-  </ion-card>
-  <div #map id="map2"></div>
+  <div class="card">
+    {{track.name}}
+    <br>
+    {{track.date | date: 'dd-MM-yyyy HH:mm' }}
+    <br>
+    {{track.place}}
+    <br>
+    <br>
+    Distance: {{currentDistance | number:'1.3' }} km
+    <br>
+    Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
+    <br>
+    Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
+    <br>
+    Time: {{ currentTime }}
+    <br>
+    {{currentNumber}} points recorded
+    <br>
+  </div>
+  <div #map2 id="map2"></div>
   <div id="canvasContainer" class="canvases" >
-<!--
-    <h1 class = 'title'>MAP. Grid size: {{gridsize}} km</h1>   
-    <canvas id="canvasMap" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
--->
     <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
     <canvas id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
     <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
