--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -12,22 +12,21 @@ ion-title{
     text-align: center;
   }
   
-  .title {
-    font-size: 20px;
+  .card {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 15px;
     font-family: 'Arial, sans-serif';
     font-weight: bold
   }
   
-  .blue-card {
-    background-color: rgb(0, 255, 255);
+  .title {
+    font-size: 15px;
+    font-family: 'Arial, sans-serif';
+    font-weight: bold
   }
-
-  ion-card-subtitle {
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        font-weight: bold;
-        padding-bottom: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
+    
+      #map2 {
+        height: 500px;
+        width: 100%;
       }
-
