satellite view on both sides, although with an unclear problem on tab1

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -37,6 +37,18 @@ ion-icon {
   color: black
 }  
 
+ion-radio-group {
+  display: flex;
+  flex-direction: row;
+}
+
+ion-radio {
+--color-checked: yellow !important;
+}
+
+ion-item {
+  flex: 1; /* Equal width for both items */
+}
 
 #map {
   height: 500px;
