--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -46,6 +46,15 @@
         <br>
       </div>
 
+      <ion-radio-group [(ngModel)]="mapStyle" (ionChange)="mapChange()" [allowEmptySelection]="false">
+        <ion-item>
+          <ion-radio  value="basic">Basic view</ion-radio><br />
+        </ion-item>
+        <ion-item>
+          <ion-radio  value="satellite">Satellite</ion-radio><br />
+        </ion-item>
+      </ion-radio-group>
+
   <div #map id="map"></div>
   <div id="canvasContainer" class="canvases" >
     <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
