--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,47 +6,60 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>            
+<ion-content>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="2" offset="1">
-        <ion-fab-button large round [ngClass]="tracking ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="startTracking()">
-          <ion-icon name="play"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-      <ion-col size="2" offset="1">
-        <ion-fab-button large round [ngClass]="tracking ? 'enabled' : 'disabled'" [disabled]="(!tracking)" (click)="stopTracking()">
-          <ion-icon name="stop"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-      <ion-col size="2" offset="3">
-        <ion-fab-button large round type="button" [ngClass]="(tracking) ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="setTrackDetails()">
-          <ion-icon name="save"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-    </ion-row>  
-  </ion-grid>  
+<ion-grid>
+  <ion-row>
+    <ion-col size="2" offset="1">
+      <ion-fab-button large round [ngClass]="tracking ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="startTracking()">
+        <ion-icon name="play"></ion-icon>
+      </ion-fab-button>
+    </ion-col>
+    <ion-col size="2" offset="1">
+      <ion-fab-button large round [ngClass]="tracking ? 'enabled' : 'disabled'" [disabled]="(!tracking)" (click)="stopTracking()">
+        <ion-icon name="stop"></ion-icon>
+      </ion-fab-button>
+    </ion-col>
+    <ion-col size="2" offset="3">
+      <ion-fab-button large round type="button" [ngClass]="(tracking) ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="setTrackDetails()">
+        <ion-icon name="save"></ion-icon>
+      </ion-fab-button>
+    </ion-col>
+  </ion-row>  
+</ion-grid>  
 
-      <div class ="card">
-        Distance: {{currentDistance | number:'1.3' }} km
-        <br>
-        Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
-        <br>
-        Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
-        <br>
-        Time: {{ currentTime }}
-        <br>
-        {{currentNumber}} points recorded
-        <br>
-        <br>
-        Current elevation: <ng-container *ngIf="currentAltitude !== undefined">{{currentAltitude | number:'1.0-0' }} m</ng-container>
-        <br>
-        Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
-        <br>
-      </div>
+<ion-radio-group [(ngModel)]="display" (ionChange)="displayChange()" [allowEmptySelection]="false">
+  <ion-item>
+    <ion-radio  value="card">Data</ion-radio><br />
+  </ion-item>
+  <ion-item>
+    <ion-radio  value="map">Map</ion-radio><br />
+  </ion-item>
+  <ion-item>
+    <ion-radio  value="plots">Plots</ion-radio><br />
+  </ion-item>
+</ion-radio-group>
 
-      <ion-radio-group [(ngModel)]="mapStyle" (ionChange)="mapChange()" [allowEmptySelection]="false">
+<div id = "card">
+  <br>
+  Distance: {{currentDistance | number:'1.3' }} km
+  <br>
+  Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
+  <br>
+  Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
+  <br>
+  Time: {{ currentTime }}
+  <br>
+  {{currentNumber}} points recorded
+  <br>
+  <br>
+  Current elevation: <ng-container *ngIf="currentAltitude !== undefined">{{currentAltitude | number:'1.0-0' }} m</ng-container>
+  <br>
+  Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
+  <br>
+</div>
+    
+      <ion-radio-group id = "radioMap" [(ngModel)]="mapStyle" (ionChange)="mapChange()" [allowEmptySelection]="false">
         <ion-item>
           <ion-radio  value="basic">Basic view</ion-radio><br />
         </ion-item>
@@ -54,14 +67,19 @@
           <ion-radio  value="satellite">Satellite</ion-radio><br />
         </ion-item>
       </ion-radio-group>
+      
+      <div id="map"></div>
 
-  <div #map id="map"></div>
-  <div id="canvasContainer" class="canvases" >
-    <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
-    <canvas id="ncanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
-    <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
-    <canvas id="ncanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
-  </div>  
-
-  </ion-content>
+        <swiper-container id="plots">
+          <swiper-slide>
+            <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
+            <canvas id="ncanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+          </swiper-slide>  
+          <swiper-slide>
+            <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
+            <canvas id="ncanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+          </swiper-slide>  
+        </swiper-container>    
+        
+</ion-content>
 
