--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,7 +7,21 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="card">
+
+  <ion-radio-group [(ngModel)]="display2" (ionChange)="displayChange2()" [allowEmptySelection]="false">
+    <ion-item>
+      <ion-radio  value="card2">Data</ion-radio><br />
+    </ion-item>
+    <ion-item>
+      <ion-radio  value="map2">Map</ion-radio><br />
+    </ion-item>
+    <ion-item>
+      <ion-radio  value="plots2">Plots</ion-radio><br />
+    </ion-item>
+  </ion-radio-group>
+
+  <div id="card2">
+    <br>
     {{track.name}}
     <br>
     {{track.date | date: 'dd-MM-yyyy HH:mm' }}
@@ -27,7 +41,7 @@
     <br>
   </div>
 
-  <ion-radio-group [(ngModel)]="mapStyle" (ionChange)="mapChange()" [allowEmptySelection]="false">
+  <ion-radio-group id = "radioMap2" [(ngModel)]="mapStyle" (ionChange)="mapChange()" [allowEmptySelection]="false">
     <ion-item>
       <ion-radio  value="basic">Basic view</ion-radio><br />
     </ion-item>
@@ -37,11 +51,17 @@
   </ion-radio-group>
   
 
-  <div #map2 id="map2"></div>
-  <div id="canvasContainer" class="canvases" >
-    <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
-    <canvas id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
-    <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
-    <canvas id="canvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
-  </div>  
+  <div id="map2"></div>
+
+  <swiper-container id="plots2">
+    <swiper-slide>
+      <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
+      <canvas id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    </swiper-slide>  
+    <swiper-slide>
+      <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
+      <canvas id="canvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    </swiper-slide>  
+  </swiper-container>    
+
 </ion-content>
