--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -8,11 +8,8 @@ ion-title{
     --background: rgb(0, 255, 255) !important;
   }
 
-  #canvasContainer {
-    text-align: center;
-  }
   
-  .card {
+  #card2 {
     margin-top: 10px;
     margin-left: 20px;
     font-size: 15px;
@@ -40,6 +37,10 @@ ion-radio {
   }
     
       #map2 {
-        height: 500px;
-        width: 100%;
+         width: 100%;
+         height: 75%
+      }
+
+      #plots2 {
+        text-align: center;
       }
