--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,46 +1,44 @@
-ion-title{
-    font-size: 30px;
-    font-family: 'Arial, sans-serif';
-    font-weight: bold
-  }
+// data
 
-  ion-toolbar{
-    --background: rgb(0, 255, 255) !important;
-  }
+#card2 {
+  margin-top: 10px;
+  margin-left: 20px;
+  font-size: 15px;
+  font-family: 'Arial, sans-serif';
+  font-weight: bold
+}
 
-  
-  #card2 {
-    margin-top: 10px;
-    margin-left: 20px;
-    font-size: 15px;
-    font-family: 'Arial, sans-serif';
-    font-weight: bold
-  }
-  
-  .title {
-    font-size: 15px;
-    font-family: 'Arial, sans-serif';
-    font-weight: bold
-  }
+// plots
 
-  ion-radio-group {
-    display: flex;
-    flex-direction: row;
-  }
+.title {
+  font-size: 15px;
+  font-family: 'Arial, sans-serif';
+  font-weight: bold
+}
+
+#plots2 {
+  text-align: center;
+}
+
+// ion-radio group
+
+ion-radio-group {
+  display: flex;
+  flex-direction: row;
+}
   
 ion-radio {
   --color-checked: rgb(0, 255, 255) !important;
 }
 
-  ion-item {
-    flex: 1; /* Equal width for both items */
-  }
-    
-      #map2 {
-         width: 100%;
-         height: 75%
-      }
+ion-item {
+  flex: 1; /* Equal width for both items */
+}
 
-      #plots2 {
-        text-align: center;
-      }
+// map
+
+#map2 {
+    width: 100%;
+    height: 100%
+}
+
