--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,25 +1,3 @@
-// data
-
-#card2 {
-  margin-top: 10px;
-  margin-left: 20px;
-  font-size: 15px;
-  font-family: 'Arial, sans-serif';
-  font-weight: bold
-}
-
-// plots
-
-.title {
-  font-size: 15px;
-  font-family: 'Arial, sans-serif';
-  font-weight: bold
-}
-
-#plots2 {
-  text-align: center;
-}
-
 // ion-radio group
 
 ion-radio-group {
@@ -42,3 +20,23 @@ ion-item {
     height: 100%
 }
 
+// data & plots  
+
+#canvas {
+    text-align: center;
+  }
+  
+  .title {
+    font-size: 15px;
+    font-family: 'Arial, sans-serif';
+    font-weight: bold;
+    text-align: center;
+  }
+
+  #card {
+    margin-left: 20px;
+    font-size: 15px;
+    font-family: 'Arial, sans-serif';
+    font-weight: bold
+  }
+  
