colors and canvas

--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -6,7 +6,7 @@ ion-radio-group {
 }
   
 ion-radio {
-  --color-checked: rgb(0, 255, 255) !important;
+  --color-checked: red !important;
 }
 
 ion-item {
