--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -10,7 +10,7 @@
   }
   
   .triangle.tab-selected {
-    background-color: #ffffbb;
+    background-color: #ffffdd;
     color: black;
   }
 
@@ -20,6 +20,6 @@
   }
 
   .square.tab-selected {
-    background-color: #bbffff;
+    background-color: #ffdddd;
     color: black;
   }
