--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,17 +1,12 @@
-// ion-radio group
-
-ion-radio-group {
-  display: flex;
-  flex-direction: row;
-}
-  
-ion-radio {
-  --color-checked: #00ff00 !important;
+ion-fab-button {
+  --background: #00ff00 !important;
+  --color: black
 }
 
-ion-item {
-  flex: 1; /* Equal width for both items */
+ion-icon {
+  --color: black
 }
+
 
 // map
 
@@ -31,12 +26,15 @@ ion-item {
     font-family: 'Arial, sans-serif';
     font-weight: bold;
     text-align: center;
+    margin-top: 75px;
   }
 
   #card {
     margin-left: 20px;
+    margin-top: 75px;
     font-size: 15px;
     font-family: 'Arial, sans-serif';
     font-weight: bold
   }
   
+
