--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,33 +1,33 @@
 <ion-content>
 
-  <ion-fab id='onMap' slot="fixed" horizontal="left" vertical="top">
+  <ion-fab id='onMap2' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('data')">
+    <ion-fab-button (click)="displayChange2('data2')">
       <ion-icon name="analytics-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('satellite')">
+    <ion-fab-button (click)="displayChange2('satellite2')">
       <ion-icon name="planet-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
   </ion-fab>
 
-  <ion-fab id='onSatellite' slot="fixed" horizontal="left" vertical="top">
+  <ion-fab id='onSatellite2' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('data')">
+    <ion-fab-button (click)="displayChange2('data2')">
       <ion-icon name="analytics-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('map')">
+    <ion-fab-button (click)="displayChange2('map2')">
       <ion-icon name="navigate-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
   </ion-fab>
 
-  <ion-fab id='onData' slot="fixed" horizontal="left" vertical="top">
+  <ion-fab id='data2' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('map')">
+    <ion-fab-button (click)="displayChange2('map2')">
       <ion-icon name="navigate-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('satellite')">
+    <ion-fab-button (click)="displayChange2('satellite2')">
       <ion-icon name="planet-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
@@ -37,7 +37,7 @@
     
 <div id="map2"></div>
 
-<swiper-container id="plots2">
+<swiper-container id="data2">
 
   <swiper-slide>
 
