--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,46 +1,72 @@
-<ion-header [translucent]="true">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="2" offset="1">
-        <ion-fab-button large round [ngClass]="tracking ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="startTracking()">
-          <ion-icon name="play"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-      <ion-col size="2" offset="1">
-        <ion-fab-button large round [ngClass]="tracking ? 'enabled' : 'disabled'" [disabled]="(!tracking)" (click)="stopTracking()">
-          <ion-icon name="stop"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-      <ion-col size="2" offset="3">
-        <ion-fab-button large round type="button" [ngClass]="(tracking) ? 'disabled' : 'enabled'" [disabled]="(tracking)" (click)="setTrackDetails()">
-          <ion-icon name="save"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-    </ion-row>  
-  </ion-grid>  
-
-<ion-radio-group [(ngModel)]="display" (ionChange)="displayChange()" [allowEmptySelection]="false">
-  <ion-item>
-    <ion-radio  value="map">Map</ion-radio><br />
-  </ion-item>
-  <ion-item>
-    <ion-radio  value="satellite">Sat</ion-radio><br />
-  </ion-item>
-  <ion-item>
-    <ion-radio  value="plots">Data</ion-radio><br />
-  </ion-item>
-</ion-radio-group>
-
-</ion-header>
-
 <ion-content>
 
+  <!-- Buttons to select map, satellite or data -->
+
+  <!-- map -->
+  <ion-fab id='onMap' slot="fixed" horizontal="left" vertical="top">
+    <ion-row>
+    <ion-fab-button (click)="displayChange2('data')">
+      <ion-icon name="analytics-outline"></ion-icon>
+    </ion-fab-button>  
+    <ion-fab-button (click)="displayChange2('satellite')">
+      <ion-icon name="planet-outline"></ion-icon>
+    </ion-fab-button>  
+    </ion-row>
+  </ion-fab>
+  <!-- satellite -->
+  <ion-fab id='onSatellite' slot="fixed" horizontal="left" vertical="top">
+    <ion-row>
+    <ion-fab-button (click)="displayChange2('data')">
+      <ion-icon name="analytics-outline"></ion-icon>
+    </ion-fab-button>  
+    <ion-fab-button (click)="displayChange2('map')">
+      <ion-icon name="navigate-outline"></ion-icon>
+    </ion-fab-button>  
+    </ion-row>
+  </ion-fab>
+  <!-- data -->
+  <ion-fab id='data' slot="fixed" horizontal="left" vertical="top">
+    <ion-row>
+    <ion-fab-button (click)="displayChange2('map')">
+      <ion-icon name="navigate-outline"></ion-icon>
+    </ion-fab-button>  
+    <ion-fab-button (click)="displayChange2('satellite')">
+      <ion-icon name="planet-outline"></ion-icon>
+    </ion-fab-button>  
+    </ion-row>
+  </ion-fab>
+
+  <!-- buttons to select start / stop recording or save track -->
+
+  <!-- before recording -->
+  <ion-fab id='before' slot="fixed" horizontal="center" vertical="top">
+    <ion-fab-button (click)="recordChange('play')">
+      <ion-icon name="play"></ion-icon>
+    </ion-fab-button>  
+  </ion-fab>
+  <!-- while recording -->
+  <ion-fab id='while' slot="fixed" horizontal="center" vertical="top">
+    <ion-fab-button (click)="recordChange('stop')">
+      <ion-icon name="stop"></ion-icon>
+    </ion-fab-button>  
+  </ion-fab>
+  <!-- after recording -->
+  <ion-fab id='after' slot="fixed" horizontal="center" vertical="top">
+    <ion-row>
+    <ion-fab-button (click)="recordChange('play')">
+      <ion-icon name="play"></ion-icon>
+    </ion-fab-button>  
+    <ion-fab-button (click)="recordChange('save')">
+      <ion-icon name="save"></ion-icon>
+    </ion-fab-button>  
+    </ion-row>
+  </ion-fab>
+  
 <div id="map"></div>
 
-<swiper-container id="plots">
+<swiper-container id="data">
   <swiper-slide>
     <div id = "card">
-      <br>
       Distance: {{currentDistance | number:'1.3' }} km
       <br>
       Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
