--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
     </ion-row>
   </ion-fab>
   <!-- satellite -->
-  <ion-fab id='onSatellite' slot="fixed" horizontal="left" vertical="top">
+  <ion-fab id='satellite' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
     <ion-fab-button (click)="displayChange2('data')">
       <ion-icon name="analytics-outline"></ion-icon>
