--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,12 +11,12 @@
     </ion-row>
   </ion-fab>
 
-  <ion-fab id='onSatellite2' slot="fixed" horizontal="left" vertical="top">
+  <ion-fab id='satellite2' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
     <ion-fab-button (click)="displayChange2('data2')">
       <ion-icon name="analytics-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('map2')">
+    <ion-fab-button (click)="displayChange2('map')">
       <ion-icon name="navigate-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
@@ -24,7 +24,7 @@
 
   <ion-fab id='data2' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('map2')">
+    <ion-fab-button (click)="displayChange2('map')">
       <ion-icon name="navigate-outline"></ion-icon>
     </ion-fab-button>  
     <ion-fab-button (click)="displayChange2('satellite2')">
