all in one with hundreds of bugs

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,5 +1,23 @@
 <ion-content>
+  Hello!
+</ion-content>
+  <!-- CURRENT: MAP-DATA SHIFT
+  <ion-fab id='mapDataShift' slot="fixed" horizontal="left" vertical="top">
+    <ion-row>
+    <ion-fab-button (click)="mapDataShift('data')">
+      <ion-icon name="analytics-outline"></ion-icon>
+    </ion-fab-button>  
+    <ion-fab-button (click)="mapDataShift('map')">
+      <ion-icon name="navigate-outline"></ion-icon>
+    </ion-fab-button>  
+    </ion-row>
+  </ion-fab>
 
+-->
+
+
+
+<!--
   <ion-fab id='onMap2' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
     <ion-fab-button (click)="displayChange2('data2')">
@@ -32,8 +50,8 @@
     </ion-fab-button>  
     </ion-row>
   </ion-fab>
-
-    <!-- map -->
+-->
+    <!-- map 
     
 <div id="map2"></div>
 
@@ -63,8 +81,8 @@
   
   </swiper-slide>
 
-  <!-- plots -->
- 
+   plots -->
+ <!--
   <swiper-slide>
     <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
     <canvas class = 'canvas' id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
@@ -76,5 +94,5 @@
 </swiper-container>    
 
 </ion-content>
-
+-->
 
