--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,63 +2,63 @@
 
   <!-- Buttons to select map, satellite or data -->
 
-  <!-- map -->
+  <!-- map 
+
   <ion-fab id='onMap' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('data')">
+    <ion-fab-button (click)="displayChangeCurrent('data')">
       <ion-icon name="analytics-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('satellite')">
+    <ion-fab-button (click)="displayChangeCurrent('satellite')">
       <ion-icon name="planet-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
   </ion-fab>
-  <!-- satellite -->
+  
+  -->
+
+  <!-- satellite 
   <ion-fab id='satellite' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('data')">
+    <ion-fab-button (click)="displayChangeCurrent('data')">
       <ion-icon name="analytics-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('map')">
+    <ion-fab-button (click)="displayChangeCurrent('map')">
       <ion-icon name="navigate-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
   </ion-fab>
-  <!-- data -->
+
+-->
+
+  <!-- data 
   <ion-fab id='data' slot="fixed" horizontal="left" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="displayChange2('map')">
+    <ion-fab-button (click)="displayChangeCurrent('map')">
       <ion-icon name="navigate-outline"></ion-icon>
     </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('satellite')">
+    <ion-fab-button (click)="displayChangeCurrent('satellite')">
       <ion-icon name="planet-outline"></ion-icon>
     </ion-fab-button>  
     </ion-row>
   </ion-fab>
+
+-->
 
   <!-- buttons to select start / stop recording or save track -->
 
   <!-- before recording -->
   <ion-fab id='before' slot="fixed" horizontal="center" vertical="top">
-    <ion-fab-button (click)="recordChange('play')">
-      <ion-icon name="play"></ion-icon>
-    </ion-fab-button>  
-  </ion-fab>
-  <!-- while recording -->
-  <ion-fab id='while' slot="fixed" horizontal="center" vertical="top">
-    <ion-fab-button (click)="recordChange('stop')">
-      <ion-icon name="stop"></ion-icon>
-    </ion-fab-button>  
-  </ion-fab>
-  <!-- after recording -->
-  <ion-fab id='after' slot="fixed" horizontal="center" vertical="top">
     <ion-row>
-    <ion-fab-button (click)="recordChange('play')">
-      <ion-icon name="play"></ion-icon>
-    </ion-fab-button>  
-    <ion-fab-button (click)="recordChange('save')">
-      <ion-icon name="save"></ion-icon>
-    </ion-fab-button>  
+      <ion-fab-button (click)="recordChange('play')">
+        <ion-icon name="play"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button (click)="recordChange('stop')">
+        <ion-icon name="stop"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button (click)="recordChange('save')">
+        <ion-icon name="save"></ion-icon>
+      </ion-fab-button>  
     </ion-row>
   </ion-fab>
   
@@ -83,14 +83,27 @@
       Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
       <br>
     </div>
+    <div id = "oldcard">
+      Distance: {{oldDistance | number:'1.3' }} km
+      <br>
+      Elevation gain: {{oldElevationGain | number:'1.0-0' }} m
+      <br>
+      Elevation loss: {{oldElevationLoss | number:'1.0-0' }} m
+      <br>
+      Time: {{ oldTime }}
+      <br>
+      {{oldNumber}} points recorded
+    </div>
   </swiper-slide>
   <swiper-slide>
     <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
-    <canvas class = 'canvas' id="ncanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <canvas class = 'canvas' id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <canvas class = 'canvas' id="oldcanvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
   </swiper-slide>  
   <swiper-slide>
     <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
-    <canvas class = 'canvas' id="ncanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <canvas class = 'canvas' id="canvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
+    <canvas class = 'canvas' id="oldcanvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
   </swiper-slide> 
 </swiper-container>    
         
