--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -47,17 +47,28 @@
 
   <!-- buttons to select start / stop recording or save track -->
 
-  <!-- before recording -->
-  <ion-fab id='before' slot="fixed" horizontal="center" vertical="top">
+  <ion-fab slot="fixed" horizontal="center" vertical="top">
     <ion-row>
-      <ion-fab-button (click)="recordChange('play')">
+      <ion-fab-button id='start' (click)="buttonClick('play')">
         <ion-icon name="play"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button (click)="recordChange('stop')">
+      <ion-fab-button id='stop' (click)="buttonClick('stop')">
         <ion-icon name="stop"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button (click)="recordChange('save')">
+      <ion-fab-button id='save' (click)="buttonClick('save')">
         <ion-icon name="save"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button id='datapage' (click)="buttonClick('datapage')">
+        <ion-icon name="analytics-outline"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button id='mappage' (click)="buttonClick('mappage')">
+        <ion-icon name="map-outline"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button id='list' (click)="buttonClick('list')">
+        <ion-icon name="list-outline"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button id='settings' (click)="buttonClick('settings')">
+        <ion-icon name="settings-outline"></ion-icon>
       </ion-fab-button>  
     </ion-row>
   </ion-fab>
@@ -67,6 +78,8 @@
 <swiper-container id="data">
   <swiper-slide>
     <div id = "card">
+      CURRENT ROUTE
+      <br>
       Distance: {{currentDistance | number:'1.3' }} km
       <br>
       Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
@@ -83,7 +96,8 @@
       Current speed: <ng-container *ngIf="currentSpeed !== undefined">{{currentSpeed | number:'1.1-1' }} km/h</ng-container>
       <br>
     </div>
-    <div id = "oldcard">
+    <div id = "card">
+      <br>
       Distance: {{oldDistance | number:'1.3' }} km
       <br>
       Elevation gain: {{oldElevationGain | number:'1.0-0' }} m
