--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,3 +1,28 @@
+.toggle-title {
+  margin: 0;
+  font-size: 1.2em;
+}
+
+.toggle-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.centered-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%; /* Ensure it takes the full height of the row */
+}
+
+ion-toggle {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
 ion-fab-button {
   --background: #00ff00 !important;
   --color: black
@@ -7,34 +32,6 @@ ion-icon {
   --color: black
 }
 
-
-// map
-
-#map2 {
-    width: 100%;
-    height: 100%
+ion-grid {
+  margin-top: 20px;
 }
-
-// data & plots  
-
-#canvas {
-    text-align: center;
-  }
-  
-  .title {
-    font-size: 15px;
-    font-family: 'Arial, sans-serif';
-    font-weight: bold;
-    text-align: center;
-    margin-top: 75px;
-  }
-
-  #card {
-    margin-left: 20px;
-    margin-top: 75px;
-    font-size: 15px;
-    font-family: 'Arial, sans-serif';
-    font-weight: bold
-  }
-  
-
