all in one with bugs

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-label id = "title" >Name, date and place</ion-label>
+    <div class="fab-container">
+      <ion-fab-button (click)="goHome()">
+        <ion-icon name="home"></ion-icon>
+      </ion-fab-button>
+    </div>
   </ion-toolbar>
 </ion-header>
 
