--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -58,10 +58,10 @@
       <ion-fab-button id='save' (click)="buttonClick('save')">
         <ion-icon name="save"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='datapage' (click)="buttonClick('datapage')">
+      <ion-fab-button id='databutton' (click)="buttonClick('data')">
         <ion-icon name="analytics-outline"></ion-icon>
       </ion-fab-button>  
-      <ion-fab-button id='mappage' (click)="buttonClick('mappage')">
+      <ion-fab-button id='mapbutton' (click)="buttonClick('map')">
         <ion-icon name="map-outline"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='list' (click)="buttonClick('list')">
