--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,13 +1,33 @@
 // header
 
+.fab-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+ion-toolbar{
+    height: 75px;
+}
+
 #title {
     margin-left: 20px;
     padding-top: 20px;
     font-size: 20px;
     font-family: 'Arial, sans-serif';
     font-weight: bold;
+    line-height: 75px;
 }  
 
+ion-icon {
+    color: black
+  }  
+  
+  ion-fab-button {
+    --background: rgb(255, 221, 221) !important;
+    --color: black
+  }
+  
 
 // ion-checkbox
 
