--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -58,6 +58,9 @@
       <ion-fab-button id='save' (click)="buttonClick('save')">
         <ion-icon name="save"></ion-icon>
       </ion-fab-button>  
+      <ion-fab-button id='trash' (click)="buttonClick('trash')">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-fab-button>  
       <ion-fab-button id='databutton' (click)="buttonClick('data')">
         <ion-icon name="analytics-outline"></ion-icon>
       </ion-fab-button>  
