--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -26,7 +26,7 @@ ion-fab-button {
     margin-top: 75px;
   }
 
-  #card {
+  .card {
     margin-left: 20px;
     font-size: 15px;
     font-family: 'Arial, sans-serif';
