--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -67,111 +67,39 @@
         </ion-col>
       </div>
     </ion-row>
-
     <ion-row>
+      <ion-col size="4">
+        <ion-button (click)="selectColor('Current')">
+          <div class="pick" >CURRENT<br>TRACK</div>
+        </ion-button>
+      </ion-col>  
+      <ion-col size="4">
+        <div class="circle" [ngStyle]="{'background-color': currentColor}"></div>
+      </ion-col>  
     </ion-row>
     <ion-row>
-      <ion-col size="4" offset="4">
-        <input type="file" (change)="onFileSelected($event)" accept=".gpx">
+      <ion-col size="4">
+        <ion-button (click)="selectColor('Archived')">
+          <div class="pick" >ARCHIVED<br>TRACK</div>
+        </ion-button>
+      </ion-col>  
+      <ion-col size="4">
+        <div class="circle" [ngStyle]="{'background-color': archivedColor}"></div>
+      </ion-col>  
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-button (click)="triggerFileInput()">
+          <div class="pick" >UPLOAD<br>TRACK</div>
+        </ion-button>
+        <input type="file" #fileInput (change)="onFileSelected($event)" accept=".gpx" style="display:none;">
+      </ion-col>  
+      <ion-col size="8">
+        <div>
+          {{ uploaded }}
+        </div>
       </ion-col>  
     </ion-row>
   </ion-grid>
-
-  
   
 </ion-content>
-  <!-- CURRENT: MAP-DATA SHIFT
-  <ion-fab id='mapDataShift' slot="fixed" horizontal="left" vertical="top">
-    <ion-row>
-    <ion-fab-button (click)="mapDataShift('data')">
-      <ion-icon name="analytics-outline"></ion-icon>
-    </ion-fab-button>  
-    <ion-fab-button (click)="mapDataShift('map')">
-      <ion-icon name="navigate-outline"></ion-icon>
-    </ion-fab-button>  
-    </ion-row>
-  </ion-fab>
-
--->
-
-
-
-<!--
-  <ion-fab id='onMap2' slot="fixed" horizontal="left" vertical="top">
-    <ion-row>
-    <ion-fab-button (click)="displayChange2('data2')">
-      <ion-icon name="analytics-outline"></ion-icon>
-    </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('satellite2')">
-      <ion-icon name="planet-outline"></ion-icon>
-    </ion-fab-button>  
-    </ion-row>
-  </ion-fab>
-
-  <ion-fab id='satellite2' slot="fixed" horizontal="left" vertical="top">
-    <ion-row>
-    <ion-fab-button (click)="displayChange2('data2')">
-      <ion-icon name="analytics-outline"></ion-icon>
-    </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('map')">
-      <ion-icon name="navigate-outline"></ion-icon>
-    </ion-fab-button>  
-    </ion-row>
-  </ion-fab>
-
-  <ion-fab id='data2' slot="fixed" horizontal="left" vertical="top">
-    <ion-row>
-    <ion-fab-button (click)="displayChange2('map')">
-      <ion-icon name="navigate-outline"></ion-icon>
-    </ion-fab-button>  
-    <ion-fab-button (click)="displayChange2('satellite2')">
-      <ion-icon name="planet-outline"></ion-icon>
-    </ion-fab-button>  
-    </ion-row>
-  </ion-fab>
--->
-    <!-- map 
-    
-<div id="map2"></div>
-
-<swiper-container id="data2">
-
-  <swiper-slide>
-
-    <div id="card">
-      {{track.name}}
-      <br>
-      {{track.date | date: 'dd-MM-yyyy HH:mm' }}
-      <br>
-      {{track.place}}
-      <br>
-      <br>
-      Distance: {{currentDistance | number:'1.3' }} km
-      <br>
-      Elevation gain: {{currentElevationGain | number:'1.0-0' }} m
-      <br>
-      Elevation loss: {{currentElevationLoss | number:'1.0-0' }} m
-      <br>
-      Time: {{ currentTime }}
-      <br>
-      {{currentNumber}} points recorded
-      <br>
-    </div>
-  
-  </swiper-slide>
-
-   plots -->
- <!--
-  <swiper-slide>
-    <h1 class = 'title'>ALTITUDE (m) vs distance (km)</h1>
-    <canvas class = 'canvas' id="canvas0" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
-  </swiper-slide>  
-  <swiper-slide>
-    <h1 class = 'title'>SPEED (km/h) vs time (ms)</h1>
-    <canvas class = 'canvas' id="canvas1" width="{{canvasNum}}" height="{{canvasNum}}"></canvas>
-  </swiper-slide>  
-</swiper-container>    
-
-</ion-content>
--->
-
