--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -69,27 +69,37 @@
     </ion-row>
     <ion-row>
       <ion-col size="4">
-        <ion-button (click)="selectColor('Current')">
+        <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Current')">
           <div class="pick" >CURRENT<br>TRACK</div>
         </ion-button>
       </ion-col>  
-      <ion-col size="4">
+      <ion-col size="2" offset="1">
         <div class="circle" [ngStyle]="{'background-color': currentColor}"></div>
+      </ion-col>  
+      <ion-col size="2" offset='1'>
+        <ion-button (click)="confirm('Current')">
+          <div class="pick" ><br>OK</div>
+        </ion-button>
       </ion-col>  
     </ion-row>
     <ion-row>
       <ion-col size="4">
-        <ion-button (click)="selectColor('Archived')">
+        <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Archived')">
           <div class="pick" >ARCHIVED<br>TRACK</div>
         </ion-button>
       </ion-col>  
-      <ion-col size="4">
+      <ion-col size="2" offset="1">
         <div class="circle" [ngStyle]="{'background-color': archivedColor}"></div>
+      </ion-col>  
+      <ion-col size="2" offset='1'>
+        <ion-button (click)="confirm('Archived')">
+          <div class="pick" ><br>OK</div>
+        </ion-button>
       </ion-col>  
     </ion-row>
     <ion-row>
       <ion-col size="4">
-        <ion-button (click)="triggerFileInput()">
+        <ion-button class = 'bigButton' expand = 'block' (click)="triggerFileInput()">
           <div class="pick" >UPLOAD<br>TRACK</div>
         </ion-button>
         <input type="file" #fileInput (change)="onFileSelected($event)" accept=".gpx" style="display:none;">
