--- a/src/global.scss
+++ b/src/global.scss
@@ -83,6 +83,10 @@
     --background: #ffffbb !important;
   }
 
+  .primaryAlert {
+    --background: #aac6f7 !important;
+  }
+
   .greenAlert{
     --background: #ddffdd !important;
   }
