--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -68,32 +68,32 @@
       </div>
     </ion-row>
     <ion-row>
-      <ion-col size="4">
+      <ion-col size="4" offset="1">
         <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Current')">
           <div class="pick" >CURRENT<br>TRACK</div>
         </ion-button>
       </ion-col>  
-      <ion-col size="2" offset="1">
-        <div class="circle" [ngStyle]="{'background-color': currentColor}"></div>
+      <ion-col size="1" offset="1">
+        <div class="line" [ngStyle]="{'background-color': currentColor}"></div>
       </ion-col>  
       <ion-col size="2" offset='1'>
         <ion-button (click)="confirm('Current')">
-          <div class="pick" ><br>OK</div>
+          <div class="pick" >OK</div>
         </ion-button>
       </ion-col>  
     </ion-row>
     <ion-row>
-      <ion-col size="4">
+      <ion-col size="4" offset="1">
         <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Archived')">
           <div class="pick" >ARCHIVED<br>TRACK</div>
         </ion-button>
       </ion-col>  
-      <ion-col size="2" offset="1">
-        <div class="circle" [ngStyle]="{'background-color': archivedColor}"></div>
+      <ion-col size="1" offset="1">
+        <div class="line" [ngStyle]="{'background-color': archivedColor}"></div>
       </ion-col>  
       <ion-col size="2" offset='1'>
         <ion-button (click)="confirm('Archived')">
-          <div class="pick" ><br>OK</div>
+          <div class="pick" >OK</div>
         </ion-button>
       </ion-col>  
     </ion-row>
